# prng-rule-30

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  rule_30.c
bench/: nist_dump.c  practrand_dump.c  testu01_harness.c
bench/results/dieharder/: w64.txt
bench/results/nist/100_iterations/w128/: result.txt
bench/results/nist/100_iterations/w256/: result.txt
bench/results/nist/100_iterations/w64/: result.txt
bench/results/nist/10_iterations/w128/: result.txt
bench/results/nist/10_iterations/w256/: result.txt
bench/results/nist/10_iterations/w32/: result.txt
bench/results/nist/10_iterations/w64/: result.txt
bench/results/nist/50_iterations/w128/: result.txt
bench/results/nist/50_iterations/w256/: result.txt
bench/results/nist/50_iterations/w64/: result.txt
bench/results/practrand/: w32.txt  w64.txt
bench/results/testu01/small_crush/: w128.txt  w256.txt  w32.txt  w64.txt
cmake/: prng30Config.cmake.in
examples/: example.c
include/: prng30.h
src/: prng.c  visualizer.c
tests/: framework.h  main.c  test_core.c  test_double.c  test_statistical.c  tests.c
visualizer/: visualizer.c
